default layout with translation

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -6,5 +6,7 @@
   "arabic": "عربي",
   "logout": "خروج",
   "home": "الرئيسية",
-  "sections": "الأقسام"
+  "sections": "الأقسام",
+  "search": "ابحث",
+  "change-theme": "تغير الواجهة"
 }
