--- a/locales/en.json
+++ b/locales/en.json
@@ -6,5 +6,7 @@
   "arabic": "عربي",
   "logout": "Logout",
   "home": "Home",
-  "sections": "Sections"
+  "sections": "Sections",
+  "search": "Search",
+  "change-theme": "Change theme"
 }
