--- a/locales/en.json
+++ b/locales/en.json
@@ -12,7 +12,26 @@
   "welcome_back": "Welcome Back!",
   "email_address": "Email Address",
   "password": "Password",
+  "password_confirmation": "Password confirmation",
   "remember_me": "Remember me",
   "forgot_your_password": "Forgot your password?",
-  "login": "Log In"
+  "login": "Log In",
+  "send_password_reset_code": "Send password reset code",
+  "reset_password": "Reset password",
+  "code": "Code",
+  "passwords_not_matched": "Passwords are not matched",
+  "profile": "Profile",
+  "edit_profile": "Edit profile",
+  "view": "View",
+  "delete_resource": "Delete resource",
+  "sure_to_delete": "Are you sure you want to delete the selected resources?",
+  "update": "Update",
+  "choose_file": "Choose File",
+  "update_password": "Update password",
+  "old_password": "Old password",
+  "new_password": "New password",
+  "admin": "Admin",
+  "updated_successfully": "Updated successfully",
+  "less_then": "less then",
+  "characters": "characters"
 }
