finish view and update admin rtl and dark

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -18,5 +18,25 @@
   "send_password_reset_code": "إرسال رمز إعادة تعيين كلمة المرور",
   "reset_password": "إعادة تعيين كلمة المرور",
   "code": "رمز",
-  "passwords_not_matched": "كلمات المرور غير متطابقة"
+  "passwords_not_matched": "كلمات المرور غير متطابقة",
+  "profile": "الملف الشخصي",
+  "admin_details": "تفاصيل المسؤول",
+  "edit_profile": "تعديل الملف الشخصي",
+  "view": "مشاهدة",
+  "delete_resource": "حذف العنصر",
+  "sure_to_delete": "هل أنت متأكد أنك تريد حذف العنصر المختارة؟",
+  "update": "تعديل",
+  "choose_file": "اختيار ملف",
+  "update_password": "تعديل كلمة المرور",
+  "old_password": "كلمة المرور القديمة",
+  "new_password": "كلمة المرور الجديدة",
+  "admin": "المسؤول",
+  "updated_successfully": "تم التعديل بنجاح",
+  "less_then": "اقل من",
+  "characters": "حروف",
+  "id": "ID",
+  "name": "الاسم",
+  "email": "البريد",
+  "avatar": "الصورة",
+  "password_confirmation": "تاكيد كلمة المرور"
 }
